fix(location): translations and layout bug
Tabbing caused overflow content to shift up

refs: #239

--- a/app/veganaut/location/locationDetailsComponent.less
+++ b/app/veganaut/location/locationDetailsComponent.less
@@ -7,7 +7,7 @@
     .modification-banner {
         background: @_color-blue;
         color: #ffffff;
-        height: 55px;
+        min-height: 55px;
         padding: 0 16px;
 
         h1 {
@@ -31,6 +31,7 @@
     opacity: 0.3 !important;
     pointer-events: none !important;
 }
+
 .vg-location-details__card + .vg-location-details__card {
     margin-top: 12px;
 }
